--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,11 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@bitspace/contracts": "workspace:*",
+    "axios": "^1.13.2",
     "lucide-react": "^0.562.0",
     "react": "^19.2.3",
-    "axios": "^1.13.2",
-    "react-router-dom": "^7.11.0",
-    "react-dom": "^19.2.3"
+    "react-dom": "^19.2.3",
+    "react-router-dom": "^7.11.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
